@@ -1,3 +1,11 @@
+2017-06-19  James Greenhalgh  <james.greenhalgh@arm.com>
+
+	Backport from mainline
+	2017-06-16  James Greenhalgh  <james.greenhalgh@arm.com>
+
+	PR target/71778
+	* gcc.target/arm/pr71778.c: New.
+
 2017-06-09  Janus Weil  <janus@gcc.gnu.org>
 
 	Backport from trunk
